# imgc-aimd-server

./: .gitignore  README.md  SLO  pyproject.toml
src/scripts/: checkgpu.py  cifar.py  imgc.py
src/server/: ctx.yaml  di.py  job.py  main.py
src/server/api/: router.py  schema.py
src/server/api/controller/: imgc.py
src/server/api/middleware/: buffer.py
src/server/api/v1/: classify.py  router.py
src/server/bootstrap/: app_factory.py  context.py  di.py
src/server/domain/: imgc.py
src/server/domain/entity/: aimd_buffer.py  context.py  imgc.py
src/server/entity/: context.py  imgc.py
src/server/infra/: aimd_buffer.py  image.py  imgc.py  logger.py
src/server/service/: image.py  imgc.py
