[tool.poetry]
name = "imgc-aimd-server"
version = "0.1.0"
description = ""
authors = ["Khai Nguyen <tuankhai2k@gmail.com>"]
readme = "README.md"
packages = [
    {include = "server", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.18.0"
tensorflow-metal = "^1.2.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"

[tool.poetry.scripts]
server = "src.server.main:launch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
